# evolvepy

./: .gitignore  README.md  pyproject.toml
examples/: tsp_demo.ipynb
examples/problems/: tsp.py
src/evolvepy/: __init__.py  base_problem.py  engine.py  individual.py  logger.py
src/evolvepy/analysis/: __init__.py  plotting.py
src/evolvepy/strategies/: __init__.py  crossover.py  mutation.py  parent_selection.py  reproduction.py  survivor_selection.py
